# visage

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: check-deploy-changes.yaml  emscripten-deploy.yaml  linux-deploy.yaml  linux-test.yaml  mac-test.yaml  mingw-test.yaml  windows-deploy.yaml  windows-test.yaml
cmake/: compile_flags.cmake  testing_framework.cmake
examples/: CMakeLists.txt  Info.plist.in  emscripten_template.html  main.cpp
examples/Basic/: basic.cpp
examples/BlendModes/: blend_modes.cpp
examples/Bloom/: bloom.cpp
examples/BlurAndBloom/: blur_and_bloom.cpp
examples/BringYourOwnWindow/: bring_your_own_window.cpp
examples/ClapPlugin/: clap_plugin.cpp  clap_plugin.h  plugin_entry.cpp
examples/FontAndText/: font_and_text.cpp
examples/Gradients/: gradients.cpp
examples/Layout/: layout.cpp
examples/LiveShaderEditing/: live_shader_editing.cpp
examples/MouseEvents/: mouse_events.cpp
examples/MultiWindow/: multi_window.cpp
examples/NoEvents/: no_ui.cpp
examples/PostEffect/: post_effect.cpp
examples/PostEffects/: post_effects.cpp
examples/Showcase/: examples_frame.cpp  examples_frame.h  showcase.cpp  showcase.h  test_drawable_component.cpp  test_drawable_component.h
examples/StencilTransparency/: stencil_transparency.cpp
examples/shaders/: fs_glitch.sc  fs_gray_scale.sc  fs_overlay.sc  fs_sepia.sc  fs_shader_quad.sc  fs_test.sc  fs_warp.sc  varying.def.sc  vs_gray_scale.sc  vs_overlay.sc  vs_sepia.sc  vs_shader_quad.sc  vs_warp.sc
visage_app/: CMakeLists.txt  application_editor.cpp  application_editor.h  application_window.cpp  application_window.h  client_window_decoration.cpp  client_window_decoration.h  window_event_handler.cpp  window_event_handler.h
visage_app/tests/: integration_tests.cpp
visage_file_embed/: CMakeLists.txt  create_embed_header.cmake  create_file_lookup.cmake  embed.cpp  embed_file.cmake  embedded_file.h
visage_graphics/: CMakeLists.txt  animation.h  canvas.cpp  canvas.h  color.cpp  color.h  embedded.cmake  emoji.cpp  emoji.h  font.cpp  font.h  gradient.cpp  gradient.h  graphics_caches.cpp  graphics_caches.h  graphics_libs.h  graphics_utils.cpp  graphics_utils.h  icon.cpp  icon.h  image.cpp  image.h  layer.cpp  layer.h  line.cpp  line.h  palette.cpp  palette.h  post_effects.cpp  post_effects.h  region.cpp  region.h  renderer.cpp  renderer.h  screenshot.cpp  screenshot.h  shader.h  shape_batcher.cpp  shape_batcher.h  shapes.cpp  (+5 more)
visage_graphics/linux/: emoji_linux.cpp
visage_graphics/macos/: emoji_macos.cpp
visage_graphics/shaders/: fs_blend_texture.sc  fs_blur.sc  fs_circle.sc  fs_color.sc  fs_diamond.sc  fs_flat_arc.sc  fs_flat_segment.sc  fs_image_sample.sc  fs_line.sc  fs_line_fill.sc  fs_mult.sc  fs_mult_threshold.sc  fs_post_effect.sc  fs_quadratic_bezier.sc  fs_rectangle.sc  fs_rectangle_border.sc  fs_rectangle_shadow.sc  fs_ring.sc  fs_rolly_ball_rotary.sc  fs_rotary.sc  fs_rounded_arc.sc  fs_rounded_corner.sc  fs_rounded_rectangle.sc  fs_rounded_rectangle_border.sc  fs_rounded_rectangle_shadow.sc  fs_rounded_segment.sc  fs_sample.sc  fs_split_threshold.sc  fs_squircle.sc  fs_threshold.sc  fs_tinted_texture.sc  fs_triangle.sc  fs_upsample.sc  shader_include.sh  shader_utils.sh  varying.def.sc  vs_arc.sc  vs_blend_texture.sc  vs_color.sc  vs_complex_shape.sc  (+13 more)
visage_graphics/tests/: color_tests.cpp  image_tests.cpp
visage_graphics/win32/: emoji_win32.cpp
visage_ui/: CMakeLists.txt  drawable_component.cpp  drawable_component.h  events.cpp  events.h  frame.cpp  frame.h  layout.cpp  layout.h  popup_menu.cpp  popup_menu.h  scroll_bar.cpp  scroll_bar.h  ui_frame.cpp  ui_frame.h  undo_history.cpp  undo_history.h
visage_ui/tests/: layout_tests.cpp
visage_utils/: CMakeLists.txt  child_process.h  defines.h  dimension.h  events.h  file_system.cpp  file_system.h  keycodes.h  live_value.cpp  live_value.h  space.h  string_utils.cpp  string_utils.h  thread_utils.h  time_utils.cpp  time_utils.h
visage_utils/linux/: child_process_linux.cpp  defines.cpp
visage_utils/macos/: child_process_macos.cpp  defines.cpp
visage_utils/posix/: child_process_macos.cpp  defines.cpp
visage_utils/tests/: child_process_tests.cpp  dimension_tests.cpp  space_tests.cpp  string_utils_tests.cpp
visage_utils/win32/: child_process_win32.cpp  defines.cpp
visage_widgets/: CMakeLists.txt  bar_component.cpp  bar_component.h  bar_list.cpp  bar_list.h  button.cpp  button.h  color_picker.cpp  color_picker.h  graph_line.cpp  graph_line.h  line_component.cpp  line_component.h  palette_editor.cpp  palette_editor.h  shader_editor.cpp  shader_editor.h  shader_quad.cpp  shader_quad.h  text_editor.cpp  text_editor.h
visage_windowing/: CMakeLists.txt  windowing.cpp  windowing.h
visage_windowing/emscripten/: windowing_emscripten.cpp  windowing_emscripten.h
visage_windowing/linux/: windowing_x11.cpp  windowing_x11.h
visage_windowing/macos/: windowing_macos.h  windowing_macos.mm
visage_windowing/win32/: windowing_win32.cpp  windowing_win32.h
